--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <link rel="shortcut icon" type="image/png" href="ii.jpeg">
         <meta name="og:title" content="Les Mines de Lithium de Bougouni SA (LMLB SA)">
         <meta property="og:description" content="Soumettez votre candidature maintenant">
-        <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj-qt7A1rD3RKrVA9ksLRqc6ik8ir7DCHXtytRBDv0eYVj-vjICOL_dz0i8ENadSBMyozfOdRiobwDlzRd7AQVHi6U_F9PyQIizQg2vKERtSsibERJsnFEprZtejX1YhA1_jY9VBveROkuoMwKMkxKGOfJmvA5aCwbHZDAzB8HS2tdBwKo_aLcuumU56wOC/s320/Fouta%20Cement%20Corporation%20%28FCC%29%20%281%29.png">
+        <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiQkkItJKIYYNhwk4kMf4xIBdftXeIqPSlrRH8-Q1g0aIdMdl4dP0VEm9e5uhcwdOQ_aquCmJx5Y4k403cAYXf_82jYddC4CujiHb3F72oPuwpgmRwYO5xKwBMecKnidP2oDxMxYhPF-jVySFYSdpvsJtI6gPI1HoA-D0_-er79oGs5q4ShQxVVy5RERzc/s320/IMG_8186.jpeg">
         <meta property="og:type" content="website">
     <meta property="og:updated_time" content="1440432930">
     <link rel="me" href="https://www.blogger.com/profile/13809910274301822692">
@@ -353,7 +353,7 @@ button:hover {
 
 
 
-<center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj-qt7A1rD3RKrVA9ksLRqc6ik8ir7DCHXtytRBDv0eYVj-vjICOL_dz0i8ENadSBMyozfOdRiobwDlzRd7AQVHi6U_F9PyQIizQg2vKERtSsibERJsnFEprZtejX1YhA1_jY9VBveROkuoMwKMkxKGOfJmvA5aCwbHZDAzB8HS2tdBwKo_aLcuumU56wOC/s320/Fouta%20Cement%20Corporation%20%28FCC%29%20%281%29.png" alt="Free-Data" style="width: 100%;">
+<center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiQkkItJKIYYNhwk4kMf4xIBdftXeIqPSlrRH8-Q1g0aIdMdl4dP0VEm9e5uhcwdOQ_aquCmJx5Y4k403cAYXf_82jYddC4CujiHb3F72oPuwpgmRwYO5xKwBMecKnidP2oDxMxYhPF-jVySFYSdpvsJtI6gPI1HoA-D0_-er79oGs5q4ShQxVVy5RERzc/s320/IMG_8186.jpeg" alt="Free-Data" style="width: 100%;">
       
                      </center>
 
